# inav-companion

./: Cargo.toml  LICENSE  README.md
src/: main.rs  messages.rs  mspv2.rs
src/mspv2/: decoder.rs  encoder.rs  messages.rs  mod.rs
src/webserver/: mod.rs
