[package]
name = "inav-companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = "1.4.0"
crc-any = "2.4.3"
futures = "0.3.28"
serde = { version = "1.0.167", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "time", "io-util"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.8", features = ["codec"] }
